Massive refactoring and updating for Java 17, JUnit 5, and general cleanup.